--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,13 +1,28 @@
-.App {
-  margin: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
+html{
+  font-size: 62.5%;
 }
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+body{
+  font-family: Helvetica Neue,Helvetica,Arial,PingFang TC,微软雅黑,Microsoft YaHei,华文细黑,STHeiti,sans-serif;
+  font-size: 1.4rem;
+  color: #333;
+  line-height: 1;
+  letter-spacing: 0.5px;
+  margin: 0 auto;
+  overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  font-weight: 400;
+  margin: 0;
 }
 .default-input{
   background: none;
   border: none;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
